logs/flask-jsonrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_JSONRPC-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_jsonrpc'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/css'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/fonts'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/img'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/apps'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/apps/browse'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/core'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/libs'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/libs/angular'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/libs/bootstrap'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/static/js/libs/jquery'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/templates'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/templates/browse'...
Listing './lib/python3.5/site-packages/flask_jsonrpc/views/browse/templates/browse/partials'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
